--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.featured {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.3rem;
+  padding: 2.4rem 0 2rem;
 }
+.second-nav {
+  background-color: #14213d;
+  color: #e5e5e5;
+}
+
+/*Burger Sh Section*/
+
+.section-burger-show {
+  height: 100vh;
+  padding: 3.3rem 3.8rem;
+}
+
+.pos-burger {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.burger-show {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  height: 480px;
+}
+
+.mid-burger {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.main-burger {
+  position: absolute;
+  min-height: 480px;
+  min-width: 480px;
+  top: -15px;
+}
+
+.arrow {
+  animation: arrowAnimation 2s linear infinite;
+}
+
+@keyframes arrowAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+/*Menu section*/
+
+.menu-section {
+  padding: 5.3rem 3.8rem;
+  height: auto;
+  background-color: #14213d;
+}
+
+.burger-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+
+  width: 150px;
+  height: 150px;
+  border: 1px solid #14213d;
+  border-radius: 1rem;
+  background-color: rgba(252, 163, 17);
+  transition: ease-out 0.3s;
+  color: #14213d;
+}
+
+.burger-list img {
+  height: 90px;
+}
+
+.burger-list:hover {
+  transform: scale(1.2);
+}
+
+/*Special Offer Section*/
+
+/* .special-offer-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4.8rem;
+
+  height: 100vh;
+  padding: 0 3.3rem;
+  background-color: #e5e5e5;
+} */
+
+.testimony {
+  width: 480px;
+}
+
+.special-offer {
+  transition: ease-in 0.3s;
+}
+
+.special-offer:hover {
+  transform: translateY(-14px);
+}
+
+.special-offer-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 300px;
+  height: 450px;
+  border-radius: 1rem;
+  background-color: white;
+}
+
+.special-offer-card img {
+  width: 180px;
+}
+
+.special-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+/*Footer Section*/
